--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/ivolucien/log-hindsight#readme",
   "devDependencies": {
     "chai": "^4.3.7",
+    "chai-spies": "^1.1.0",
     "mocha": "^10.2.0"
   }
 }
