--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "files": "src/**/*",
   "type": "module",
   "scripts": {
-    "test": "mocha 'src/tests/**/*.test.js'",
-    "test-debug": "HINDSIGHT_LOG_LEVEL=trace mocha 'src/tests/**/*.test.js'"
+    "test": "NODE_ENV=test mocha 'src/tests/**/*.test.js'",
+    "test-debug": "NODE_ENV=test-trace HINDSIGHT_LOG_LEVEL=trace mocha 'src/tests/**/*.test.js'"
   },
   "repository": {
     "type": "git",
