--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "lint": "eslint src",
     "lint-fix": "eslint src --fix",
-    "test": "NODE_ENV=test mocha 'src/tests/**/*.test.js' 'src/tests/**/*.integration.js'",
-    "test-dev": "NODE_ENV=development mocha 'src/tests/**/*.test.js' 'src/tests/**/*.integration.js'",
+    "test": "DEBUG='hindsight:*,-*:trace' NODE_ENV=test mocha 'src/tests/**/*.test.js' 'src/tests/**/*.integration.js'",
+    "test-dev": "DEBUG='hindsight:*' NODE_ENV=development mocha 'src/tests/**/*.test.js' 'src/tests/**/*.integration.js'",
     "test-stress": "date -u && NODE_ENV=stress mocha 'src/tests/**/*.stress.js'; date -u"
   },
   "repository": {
@@ -42,6 +42,7 @@
     "winston": "^3.11.0"
   },
   "dependencies": {
+    "debug": "^4.3.4",
     "object-sizeof": "^2.6.4",
     "quick-lru": "^7.0.0",
     "ringbufferjs": "^2.0.0"
