--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "winston": "^3.11.0"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "debug": "^4.3.4",
     "object-sizeof": "^2.6.4",
     "quick-lru": "^7.0.0",
